<resources>
    <string name="app_name">Attention Please</string>
    <string name="four">four</string>
    <string name="three">three</string>
    <string name="two">two</string>
    <string name="one">one</string>
    <string name="todo">TODO</string>
    <string name="attention_please">Attention Please</string>
    <string name="sign_in">\u0020\u0020Sign in\u0020\u0020</string>
    <string name="password">Password</string>

    <string name="user_name">Your Name</string>
    <string name="phone">Phone Number</string>
    <string name="usn">USN</string>
    <string name="address">Address</string>
    <string name="college">College</string>
    <string name="branch">Branch</string>
    <string name="city">District</string>
    <string name="state">State</string>
    <string name="institution_type">Institution Type</string>
    <string name="logout">Logout</string>
    <string name="university">University</string>
    <string name="email">E-mail</string>
    <string name="check_toast">Position %1$d : %2$s</string>
    <string name="subseribe_selected_topics">Subscribe Selected Topics</string>

    <string name="action_profile">Profile</string>
    <string name="action_sign_in">Log in</string>
    <string name="display_name">Display Name</string>
    <string name="title_activity_send_notification">SendNotification</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_news_feed">NewsFeed</string>

    <string-array name="indicator_style">
        <item>None</item>
        <item>Circle</item>
        <item>Icon</item>
        <item>Count</item>
    </string-array>
    <string-array name="indicator_gravity_hor">
        <item>Left</item>
        <item>Right</item>
        <item>Center</item>
    </string-array>
    <string-array name="indicator_gravity_ver">
        <item>Top</item>
        <item>Bottom</item>
        <item>Center</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort_ascending">Sort Ascending</string>
    <string name="sort_descending">Sort Descending</string>
    <string name="clear_sorting">Clear</string>
    <string name="hiding_row_sample">Hiding 3. Row Sample</string>
    <string name="showing_row_sample">Showing 3. Row Sample</string>
    <string name="scroll_to_column_position">Scroll to 15. column position</string>
    <string name="scroll_to_row_position">Scroll to 5. row position</string>
    <string name="show_hide_the_column">Showing / Hiding 1. column</string>
    <string name="table_pagination_details">Page %s, showing items %s - %s.</string>
    <string-array name="moods">
        <item></item>
        <item>Happy</item>
        <item>Sad</item>
    </string-array>
    <string-array name="gender">
        <item></item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="items_per_page">
        <item>10</item>
        <item>20</item>
        <item>25</item>
        <item>50</item>
        <item>All</item>
    </string-array>


    <string name="tuesday">Tuesday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="monday">Monday</string>
    <string name="friday">Friday</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>

    <string name="monkey_d_luffy">Monkey D Luffy</string>
    <string name="roronoa_zoro">Roronoa Zoro</string>
    <string name="notification">Profile</string>
    <string name="news_feed">News Feed</string>
    <string name="time_table">Time Table</string>
    <string name="results">Results</string>
    <string name="profile">Profile</string>
    <string name="settings">Forum</string>
    <string name="log_out">LOG OUT</string>
    <string name="seat_allotment">Seat Allotment</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="login">LOGIN</string>
    <string name="passstar">***********</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="college_id_number">College ID Number</string>
    <string name="name">Name</string>
    <string name="seat">SEAT ALLOTMENT</string>
    <string name="next_subject">Next Subject</string>
    <string name="sub">sub</string>
    <string name="block">block</string>
    <string name="room">room</string>
    <string name="seatseat">seat</string>
    <string name="time">time</string>
    <string name="timetime">Time</string>
    <string name="seatno">Seat No.</string>
    <string name="rooom">Room</string>
    <string name="blockb">Block</string>
    <string name="subject">Subject</string>
    <string name="go_back">Go Back</string>
    <string name="enter_your_college_id">Enter Your College ID</string>
    <string name="check">Check</string>


</resources>
