<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.admin.attention.startActivity.alogin">

    <ImageView
        android:layout_width="282dp"
        android:layout_height="84dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />


    <EditText
        android:id="@+id/editTextLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:gravity="center_horizontal"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:singleLine="true"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextLoginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry"
        tools:targetApi="m" />

    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:drawableLeft="@drawable/ic_lock_white_24dp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_lock_white_24dp"
        android:drawableTint="@color/white"
        android:gravity="center_horizontal"
        android:hint="@string/passstar"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:singleLine="true"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry"
        tools:targetApi="m" />

    <Button
        android:id="@+id/buttonLLogin"
        android:layout_width="280dp"
        android:layout_height="44dp"
        android:layout_marginBottom="88dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:background="@drawable/whitebutton"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
