<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/allotseatimg"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:src="@drawable/seat_allotment_karnataka" />

    <ImageView
        android:id="@+id/bluecoloralpha"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:alpha="0.80"
        android:src="@color/colorPrimary" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/graduate"
        android:text="@string/seat"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/SubjectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/enter_your_college_id"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bluecoloralpha" />

    <EditText
        android:id="@+id/usnInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@+id/SubjectText"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints"
        android:textColor="@color/graylight"/>


    <ImageView
        android:id="@+id/line_blue"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:scaleX="1.3"
        android:src="@drawable/lineblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usnInput" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="108dp"
        android:layout_weight="1"
        android:background="@color/trans"
        android:text="@string/check"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usnInput" />

</android.support.constraint.ConstraintLayout>
